https://bugs.webkit.org/show_bug.cgi?id=68590

Floats pushed to next page, column or region don't reposition properly if the amount of
available logical width at the new position changes. Refactor the code so that we can
run the float placement algorithm again when this happens.

Source/WebCore:

Covered by an existing regions test that exposes the issue.

Reviewed by Adam Roben.

* rendering/RenderBlock.cpp:
(WebCore::RenderBlock::computeLogicalLocationForFloat):
(WebCore::RenderBlock::positionNewFloats):
* rendering/RenderBlock.h:

LayoutTests:

Reviewed by Adam Roben.

* fast/regions/webkit-flow-floats-inside-regions-bounds-expected.txt:



Canonical link: https://commits.webkit.org/84568@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@95724 268f45cc-cd09-0410-ab3c-d52691b4dbfc